updated code in chat folder

--- a/chat/package.json
+++ b/chat/package.json
@@ -15,7 +15,8 @@
     "react-native": "0.79.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@react-native-community/cli": "^18.0.0"
   },
   "private": true
 }
